--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 	  <!-- Section: Social media -->
 	  <section class="mb-4">
 		<!-- Facebook -->
-		<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+		<a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/navjyotsingh.rai?mibextid=ZbWKwL" role="button"
 		  ><i class="fa fa-facebook-f"></i
 		></a>
   
@@ -183,7 +183,7 @@
 		></a>
   
 		<!-- Instagram -->
-		<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+		<a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/navjyotsinghrai9?igshid=YmMyMTA2M2Y=" role="button"
 		  ><i class="fa fa-instagram"></i
 		></a>
   
